workloads/transmission/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transmission
  namespace: media
  labels:
    app: transmission
spec:
  selector:
    matchLabels:
      app: transmission
  template:
    metadata:
      labels:
        app: transmission
    spec:
      containers:
      - name: transmission
        image: haugene/transmission-openvpn:3.3
        imagePullPolicy: IfNotPresent
        securityContext:
          capabilities:
            add: ["NET_ADMIN"]
        ports:
        - name: http
          containerPort: 9091
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /transmission/web
            port: 9091
          initialDelaySeconds: 10
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /transmission/web
            port: 9091
          initialDelaySeconds: 10
          periodSeconds: 5
        volumeMounts:
        - name: transmission-root
          mountPath: "/data"
      dnsConfig:
        nameservers:
        - 8.8.4.4
        - 8.8.8.8
        options:
        - name: ndots
          value: "2"
        - name: edns0
      volumes:
      - name: transmission-root
        persistentVolumeClaim:
          claimName: pvc-nfs-client-provisioner-transmission-root
