workloads/transmission/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: transmission-ingress
  namespace: media
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - transmission.toothyshouse.com
  rules:
  - host: transmission.toothyshouse.com
    http:
      paths:
      - path: /
        backend:
          serviceName: transmission-service
          servicePort: 80
